<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/vision"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorAccent"
tools:context="com.example.marina.random.Vision">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/add_users"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/addusers" />

        <TextView
            android:id="@+id/doText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/register_form_text"
            android:textAllCaps="true"
            android:textColor="@color/colorTextSplash"
            android:textSize="20dip"
            android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/fields_style"
        android:textColor="@color/colorTextinFields"
        android:padding="10sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginRight="20sp"
            android:text="@string/nationality"
            />
        <Spinner
            android:id="@+id/nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="@color/colorTextinFields"
            android:hint="@string/nationality"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:background="@drawable/fields_style"
            android:textColor="@color/colorTextinFields"
            android:padding="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginRight="20sp"
                android:text="@string/gender"
                />

            <RadioGroup
                android:id="@+id/gender_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="17dp"
                    android:layout_marginRight="10sp"/>

                <RadioButton
                    android:id="@+id/female"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>

            </RadioGroup>
        </LinearLayout>

        <EditText
            android:id="@+id/reg_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:background="@drawable/fields_style"
            android:textColor="@color/colorTextinFields"
            android:padding="10sp"
            android:layout_marginTop="10dp"
            android:hint="@string/reg_date"/>

        <EditText
            android:id="@+id/amount_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/fields_style"
            android:hint="@string/number_users"
            android:inputType="number"
            android:padding="10sp"
            android:textColor="@color/colorTextinFields" />

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/add"
            android:background="@drawable/buttonstyle"/>

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:padding="5sp"
            android:textColor="@color/colorError"
            android:textSize="18dp"
            android:text=""
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />

    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>
